@@ -20,14 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 206)
-(Parent-Version lpmud 3-3 205)
-(Version-Log "Updated DeeperTrouble support.
-The H_DEFAULT_METHOD hook accepts by-reference args as varargs.
-Program block reallocations are now checked if they are big enough.")
+(Project-Version lpmud 3-3 207)
+(Parent-Version lpmud 3-3 206)
+(Version-Log "Corrected a diagnostic for CHECK_OBJECT_GC_REF.")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 03 May 2002 10:49:33 -0600")
+(Checkin-Time "Tue, 07 May 2002 09:57:17 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -61,7 +59,7 @@ Program block reallocations are now checked if they are big enough.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.6 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.40 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.269 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.270 644))
   (HISTORY (lpmud/f/49_HISTORY 1.254 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.14 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -225,7 +223,7 @@ Program block reallocations are now checked if they are big enough.")
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.26 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.75 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.9 644))
-  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.47 644))
+  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.48 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.2 644))
   (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.35 644))
   (src/strfuns.h (lpmud/B/51_strfuns.h 1.11.1.4 644))
@@ -454,7 +452,7 @@ Program block reallocations are now checked if they are big enough.")
   (src/bugs/ferrycode/cog.c (lpmud/U/6_cog.c 1.1 644))
   (src/bugs/ferrycode/carrack.c (lpmud/U/7_carrack.c 1.1 644))
 
-  (src/bugs/b-summary (lpmud/C/34_b-summary 1.47.1.31 644) :no-keywords)
+  (src/bugs/b-summary (lpmud/C/34_b-summary 1.47.1.32 644) :no-keywords)
   (src/bugs/b-990217-1 (lpmud/k/10_b-990217-1 1.3 644) :no-keywords)
   (src/bugs/b-990605 (lpmud/t/4_b-990605 1.1 644) :no-keywords)
   (src/bugs/b-000214 (lpmud/F/41_b-000214 1.1 644) :no-keywords)
@@ -486,6 +484,7 @@ Program block reallocations are now checked if they are big enough.")
   (src/bugs/b-020331 (lpmud/V/19_b-020331 1.2 644) :no-keywords)
   (src/bugs/b-020415 (lpmud/V/38_b-020415 1.2 644) :no-keywords)
   (src/bugs/b-020425-0 (lpmud/V/39_b-020425-0 1.1 644) :no-keywords)
+  (src/bugs/b-020506 (lpmud/V/41_b-020506 1.1 644) :no-keywords)
 
   (src/bugs/f-summary (lpmud/C/37_f-summary 1.39.1.65 644) :no-keywords)
   (src/bugs/f-981027-0 (lpmud/g/29_f-981027-0 1.2 644) :no-keywords)
